bug 704004 websockets null check of channel before calling close on it r=jduell